# VeilleTechnologique

./: .clang-format  CMakeLists.txt  LICENSE
application/: CMakeLists.txt
application/include/asmlgen/application/: dummy.h
application/include/asmlgen/application/coco_pipeline/: coco_dataset_types.h  coco_decompression_data.h  coco_decompression_data_to_file_write_data_converter.h  coco_json_parser.h  coco_transient_entry_to_coco_decompression_data_converter.h  encode_image.h  mask_decompression.h  transient_coco_entry.h
application/include/asmlgen/application/config/: assertion.h  version.h
application/include/asmlgen/application/dataset/: coco_dataset_types.h  coco_json_parser.h  dataset_entry.h  dataset_entry_id_sequence.h  dataset_json_parser.h  file_loader.h  file_reader.h  json_parsing_helpers.h  transient_coco_entry.h  transient_dataset_entry.h
application/include/asmlgen/application/generic_pipeline_utils/: download_data.h  download_data_to_write_data_converter.h  download_file.h  fetch_download_size.h  file_write_data.h  pipeline.h  write_file.h
application/include/asmlgen/application/tasking/: call_chain.h  orchestrator.h  reusable_thread.h  task.h  task_manager.h  task_pool.h  task_waiting_queue.h
application/include/asmlgen/application/tasking/refactor/: call_chain.h  reusable_thread.h  task.h  task_manager.h
application/source/asmlgen/application/: dummy.cpp
application/source/asmlgen/application/coco_pipeline/: coco_decompression_data.cpp  coco_decompression_data_to_file_write_data_converter.cpp  coco_json_parser.cpp  coco_transient_entry_to_coco_decompression_data_converter.cpp  encode_image.cpp  mask_decompression.cpp  transient_coco_entry.cpp
application/source/asmlgen/application/dataset/: coco_json_parser.cpp  dataset_entry.cpp  dataset_entry_id_sequence.cpp  dataset_json_parser.cpp  file_loader.cpp  file_reader.cpp  json_parsing_helpers.cpp  transient_coco_entry.cpp  transient_dataset_entry.cpp
application/source/asmlgen/application/generic_pipeline_utils/: download_data.cpp  download_data_to_write_data_converter.cpp  download_file.cpp  fetch_download_size.cpp  file_write_data.cpp  write_file.cpp
application/source/asmlgen/application/tasking/: orchestrator.cpp  task.cpp  task_pool.cpp  task_waiting_queue.cpp
application/source/asmlgen/application/tasking/refactor/: reusable_thread.cpp  task.cpp  task_manager.cpp
application/test/: CMakeLists.txt
application/test/dataset/: dataset_entry_id_sequence_tests.cpp
cmake/: CompilerWarnings.cmake  Conan.cmake  Testing.cmake  conanfile.txt
conan_setup/: README
sandbox/: CMakeLists.txt
sandbox/async/: main.cpp
sandbox/parser/: parser.cpp
sandbox/refactor_task_test/: main.cpp
sandbox/refactored_task/: main.cpp
